# exchange_project_ws

./: README.md
src/collab_industrial_research/gz_world_package/: CMakeLists.txt  package.xml
src/collab_industrial_research/gz_world_package/launch/: fws_robot_spawn.launch.py  (+2 more)
src/kuka_moveit_config/: .setup_assistant  package.xml
src/kuka_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  kuka_kr3r540.ros2_control.xacro  kuka_kr3r540.srdf  kuka_kr3r540.urdf.xacro  moveit_controllers.yaml  ros2_controllers.yaml
src/kuka_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/models/kuka_gripper_visualize/: CMakeLists.txt  package.xml
src/models/kuka_kr3_model/: CMakeLists.txt  package.xml
src/models/onrobot_2fg7_gripper_description/: CMakeLists.txt  package.xml
src/models/onrobot_2fg7_gripper_description/urdf/: onrobot_2fg7.xacro
src/models/robotiq_2f_140_gripper_visualization/: CMakeLists.txt  package.xml
src/models/ur5e_gripper_visualize/: CMakeLists.txt  package.xml
src/models/ur5e_model_pkg/: CMakeLists.txt  package.xml
src/models/ur5e_model_pkg/config/: bridge.yaml  ur5e_controllers.yaml
src/models/ur5e_model_pkg/launch/: moveit_ur5e_spawn.launch.py  spawn_ur5e.launch.py  spawn_ur5e_camera_moveit2.launch.py  start_gz_sim.launch.py  test_spawn.launch.py  view_rviz_ur5e.launch.py
src/models/ur5e_model_pkg/log/: latest_list
src/models/ur5e_model_pkg/urdf/: camera.xacro  ur5e_camera.urdf.xacro  ur5e_ros2_control.xacro  ur_macro.xacro
src/models/ur5e_model_pkg/worlds/: start_world.sdf
src/robot_movement/: CMakeLists.txt  package.xml
src/robot_movement/log/: latest_list
src/robot_movement/scripts/: coppelia_bridge.py
src/robot_movement/src/: robot_movement.cpp
src/ur5e_config_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/ur5e_config_moveit/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ur5e.ros2_control.xacro  ur5e.srdf  ur5e.urdf.xacro
src/ur5e_config_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/ur5e_moveit_config/: .setup_assistant  package.xml
src/ur5e_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  sensors_3d.yaml  ur5e_robot.ros2_control.xacro  ur5e_robot.srdf  ur5e_robot.urdf.xacro
src/ur_final_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ur_final_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  ur5e.ros2_control.xacro  ur5e.srdf  ur5e.urdf.xacro
src/ur_final_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
(+10 files in other folders)
