<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>onrobot_2fg7_gripper_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="marat@todo.todo">marat</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <exec_depend>urdf</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros GZ_SIM_RESOURCE_PATH = "/home/marat/exchange_prj_ws/install/onrobot_2fg7_gripper_description/share/"/>
  </export>
</package>
